# FastCask-DB

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  run.sh
benchmark/: CMakeLists.txt  test.cpp  test.sh
headers/: keydir.hpp  logger.hpp  metadata.hpp  parser.hpp  utils.hpp
src/: keydir.cpp  logger.cpp  parser.cpp  utils.cpp
